--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -1,5 +1,5 @@
 name: Terraform Plan
-on: push #trigger automatico
+on: workflow_dispatch #trigger manualmente
 env:
   AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
   AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
@@ -15,7 +15,7 @@ jobs:
       - name: checkout #faz o download dos arquivos do respositorio para pipeline
         uses: actions/checkout@v2
       - name: Terraform Init
-        run: terraform init
+        run: terraform init -reconfigure
       - name: Terraform Validate
         run: terraform validate
       - name: Terraform Fmt
